# seal-practice

./: CMakeLists.txt  Makefile  README.md  ckks_sort.cpp  example_runner.cpp  example_runner.h  helpers.h  simple_arithmetic.cpp  simple_arrays.cpp  simple_conditional_select.cpp  simple_floating_point.cpp
